2007-06-01  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Added.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Gave up on implementing IAddChild members for now.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Changed IsItemsHostProperty to match documentation.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Added ZIndex support.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Added background rendering.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Fixed typo in ShouldSerializeChildren().

2007-05-29  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs: Fixed measurement.
	* Panel.cs: Disabled as it is not complete yet and Canvas can work without it.

2007-05-29  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs, Panel.cs: Finished stubbing.

2007-05-28  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs: Added.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBar.cs, Slider.cs: Switched to implemented RangeBase.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented Thumb.

2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed comment as the need for that Binding is confirmed.

2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed TODO left from previous change.

2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Fixed to support IsDirectionReversed and Orientation.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed an incorrect fix.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented RepeatButton.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Button.cs, CheckBox.cs, Label.cs, ProgressBar.cs, RadioButton.cs, Slider.cs: Let WPF load theme styles automatically.