@@ -1,3 +1,7 @@
+2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* TabControl.cs: Finished stubbing.
+
 2007-06-01  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* TabControl.cs: Added.
